--- a/reportMaster2/main.tex
+++ b/reportMaster2/main.tex
@@ -10,7 +10,7 @@
 \graphicspath{{./img/}}
 
 \usepackage{geometry}
-\geometry{hmargin=2.5cm,vmargin=2.5cm}
+\geometry{hmargin=2.5cm,vmargin=2.8cm}
 
 \usepackage{tikz}
 
@@ -74,9 +74,9 @@
 
 \section*{Cadre}
 
-Ce rapport concerne le stage de fin d'études que j'ai effectué chez INRIA Bordeaux (Institut National de Recherche en Informatique et Automatisme) au sein de l'équipe Storm. Le stage s'est déroulé du $1^{er}$ février $2015$ au $31$ juillet $2015$, encadré par Olivier Aumage et Denis Barthou -- respectivement chargé de recherche et directeur de l'équipe Storm. L'intitulé du stage était \og Extraction automatisée de parallélisme de tâches, et expression dans le formalisme SYCL \fg.
+Ce rapport concerne le stage de fin d'études que j'ai effectué chez INRIA Bordeaux (Institut National de Recherche en Informatique et Automatisme) au sein de l'équipe Storm. Le stage s'est déroulé du $1^{er}$ février $2015$ au $31$ juillet $2015$, encadré par Olivier Aumage et Denis Barthou. Olivier Aumage est chargé de recherche dans l'équipe Storm. Denis Barthou est le directeur de cette équipe, il est également professeur à l'Institut Polytechnique de Bordeaux (IPB). L'intitulé du stage était \og Extraction automatisée de parallélisme de tâches, et expression dans le formalisme SYCL \fg.
 
-Du point de vue académique ce stage sera évalué à la fois par l'Enseirb-Matmeca dans le cadre du diplôme d'ingénieur en informatique avec spécialité PRCD (Parallélisme, Régulation et Calcul Distribué) -- et à la fois par l'Université de Bordeaux dans le cadre du master de recherche informatique RSM (Réseaux et Systèmes Mobiles, parcours Calcul Haute Performance). À ce titre mes tuteurs respectifs sont Denis Barthou et Paul Dorbec.
+Du point de vue académique ce stage sera évalué à la fois par l'Enseirb-Matmeca dans le cadre du diplôme d'ingénieur en informatique avec spécialité PRCD (Parallélisme, Régulation et Calcul Distribué) -- et par l'Université de Bordeaux dans le cadre du master de recherche informatique RSM (Réseaux et Systèmes Mobiles, parcours Calcul Haute Performance). À ce titre mes tuteurs respectifs sont Denis Barthou et Paul Dorbec.
 
 \section*{Remerciements}
 
